# grpc-template

./: .editorconfig  .gitignore  Makefile  WORKSPACE  grpc-template-dev.nginx.conf  hello-world.nginx.conf  package-lock.json  package.json
backend/: Cargo.toml  build.rs  main.rs  my_db.db3
backend/src/: error.rs  main.rs  server.rs  strings_service.rs  tonic_service.rs
frontend/: angular.json  package-lock.json  package.json  proxy.conf.js  tsconfig.app.json
frontend/src/app/: app.component.html  app.component.ts
node/: BUILD  build_rules.bzl
proto/: grpc_template.proto  helloworld.proto  service.proto
ui/: jsconfig.json  package-lock.json  package.json  vite.config.ts
ui/src/: App.svelte
ui/src/app/: app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
ui/src/app/__snapshots__/: app.component.spec.ts.snap
ui/src/lib/: HelloWorld.svelte
web-client/: .eslintrc.json  BUILD  package-lock.json
web-client/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts
