[package]
name = "backend"
version = "0.0.0"
edition = '2018'

[[bin]]
name="backend"
path = "src/main.rs"

[dependencies]
tonic = "0.6"
tonic-web = "0.2.0"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rusqlite = "0.27.0"

[build-dependencies]
tonic-build = "0.6"